# Intro_robots

./: README.md  package.xml  setup.cfg  setup.py  view_robot.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/servo_controller/launch/servo_controller/launch/: servo_controller_gazebo.launch.py
install/servo_controller/share/servo_controller/: package.sh  package.xml
install/servo_controller/share/servo_controller/launch/: view_robot.launch.py
install/servo_controller/share/servo_controller/urdf/: my_turtlebot3_burger.urdf
launch/: servo_controller.launch  servo_controller_gazebo.launch.py
log/: latest_build
servo_controller/: servo_controller.py
